[package]
name = "river-rustfiles"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/amirography/river-rustfiles/"
license = "GPL-3.0"

[dependencies]
dirs = "4.0.0"
rustix = { version = "0.35.11", features = ["process"] }
tokio = { version = "1.21.2", features = ["full"] }


[install]
root = "/home/a/.config/river"

[profile.rel]
inherits = "release"
debug = 0
strip = true
lto = "fat"
[badges]
maintenance = { status = "actively-developed" }
